--- a/src/Component/Header/header.module.css
+++ b/src/Component/Header/header.module.css
@@ -48,7 +48,7 @@
     background-color: firebrick;
     color: #ffffff;
     padding: 5px 10px;
-    border-radius: 1rem ;
+    border-radius: 1ch ;
     border: none;
     cursor: pointer;
 }
