--- a/src/Component/Content/content.module.css
+++ b/src/Component/Content/content.module.css
@@ -10,12 +10,14 @@
 }
 .oddSubContent {
     display: flex;
+    flex-direction: row;
     align-items: center;
     justify-content: space-around;
     gap: 20px;
 }
 .contactSubContent {
     display: flex;
+    flex-direction: row;
     align-items: center;
     justify-content: center;
     gap: 20px;
@@ -87,3 +89,17 @@
     font-weight: 500;
     font-size: 20px;
 }
+
+@media only screen and (max-width: 760px){
+    .contactSubContent {
+        flex-direction: column;
+    }
+    .oddSubContent {
+        flex-direction: column;
+    }
+    .gridContainer {
+        grid-template-columns: auto ;
+    }
+}
+
+/* @media only screen and (max-width: 760px) { */
