--- a/src/Component/Header/header.module.css
+++ b/src/Component/Header/header.module.css
@@ -52,3 +52,13 @@
     border: none;
     cursor: pointer;
 }
+
+@media only screen and (max-width: 860px) {
+    .menuItem {
+        font-size: 12px;
+        font-weight: 500;
+    }
+    .mainBtn {
+        gap: 2px;
+    }
+}
